--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="up-section"> up-section</div>
-    <div class="nav">nav</div>
-    <div class="hero">hero</div>
-    <div class="main-section">main</div>
-    <footer class="footer">footer</footer>  
+    <!--div class="up-section"> up-section</div -->
+    <div class="nav">
+        <ul class="nav-buttons-group">
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </div>
+    <div class="hero"></div>
+    <div class="main-section">
+        <h1>Welcome!</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In pellentesque massa placerat duis ultricies. Mauris ultrices eros in cursus. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. In fermentum posuere urna nec tincidunt. Etiam sit amet nisl purus in mollis. Cras sed felis eget velit aliquet sagittis id. Morbi quis commodo odio aenean. Pharetra magna ac placerat vestibulum. Nunc lobortis mattis aliquam faucibus purus in massa. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas. Massa id neque aliquam vestibulum morbi blandit cursus. Ac placerat vestibulum lectus mauris ultrices. Curabitur gravida arcu ac tortor dignissim convallis aenean et tortor. Arcu cursus euismod quis viverra nibh. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. Tortor dignissim convallis aenean et tortor at. Et molestie ac feugiat sed lectus vestibulum. Tellus mauris a diam maecenas sed enim ut.</p>
+    </div>
+    <footer class="footer"> All Rights Reserved ® </footer>  
 
 <script src="./script.js"></script>
 </body>
